<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_whitelist"
            android:icon="@drawable/ic_local"
            android:title="@string/menu_whitelist" />
        <item
            android:id="@+id/nav_unsent"
            android:icon="@drawable/ic_unupload"
            android:title="@string/menu_unsent" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_preferences"
            android:title="@string/menu_network" />
    </group>

</menu>
