<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center_horizontal"
            android:text="@string/menu_branch"/>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_marginStart="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_login_message"/>

        </LinearLayout>

        <RadioGroup
            android:layout_margin="10dp"
            android:id="@+id/branch_rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/branch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/branch_zavod"/>

            <RadioButton
                android:id="@+id/branch2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/branch_pm"/>

            <RadioButton
                android:id="@+id/branch3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/branch_tires"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/label_ok"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>